Fix overflow in ans-grid-headers

--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -498,6 +498,7 @@ li .sub {
     min-width: 6rem;
     min-height: 6rem;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .ans-grid-header .ans-grid-content {
